# epc-v5

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
config/: source_import.yml
docs/: README.md  epc-v4-data-model-design.md  epc-v4-implementation-history.md  epc-v5-data-model-design.md  epc-v5-implementation-history.md  epc-v5-rebuild-guide.md
macros/: backfill_identity_rule_logic_versions.sql  canonical_coordinate.sql  epc_rating.sql  identity_assignment_publication.sql  normalise_address.sql  normalise_gbp_cost.sql  normalise_uk_postcode.sql  stable_sha256.sql  strict_integer.sql
models/: README.md
scripts/: profile_identity_blocks.py  profile_identity_uprn_groups.py  setup_libpostal_benchmark.sh
seeds/: identity_blocking_policy.csv
tests/: approximate_coordinates_have_no_official_geography.sql  coordinate_algorithm_fixtures.sql  coordinate_key_fixture.sql  coordinate_pair_key_contract.sql  coordinate_pair_source_closure.sql  coordinate_transform_runtime_version.sql  coordinate_wgs84_benchmark.sql  coordinate_wgs84_closure.sql  core_atomic_fact_reconciliation.sql  core_atomic_facts_have_no_subject_identity.sql  core_recommendation_parent_and_cost_closure.sql  epc_address_libpostal_route_contract.sql  epc_certificate_conflicts_classified.sql  epc_conflict_classification_fixtures.sql  epc_recommendation_aggregate_cost_nulls.sql  epc_recommendation_aggregate_has_no_entity_or_location.sql  epc_recommendation_aggregate_reconciliation.sql  geography_dimension_contract.sql  (+52 more)
(+86 files in other folders)
