[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epc-v4"
version = "0.1.0"
description = "Evidence-first UK EPC, property identity and retrofit intelligence pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "duckdb==1.5.4",
  "dbt-core==1.11.12",
  "dbt-duckdb==1.10.1",
  "splink==4.0.16",
  "pandas==3.0.3",
  "psutil>=7.0,<8.0",
  "python-dotenv>=1.1,<2.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0,<5.0",
  "pytest>=8.0,<10.0",
  "pytest-cov>=6.0,<8.0",
  "ruff>=0.12,<1.0",
  "sqlfluff>=3.4,<5.0",
  "sqlfluff-templater-dbt>=3.4,<5.0",
]
graph = [
  "neo4j>=5.28,<7.0",
]
parquet = [
  "pyarrow>=18.0,<24.0",
]
address-benchmark = [
  "postal @ git+https://github.com/openvenues/pypostal.git@d6666a4f6a2ae0e7b83e037a35412f0f6b45c318",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["epc_v4"]
branch = true

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "dbt"
max_line_length = 100
max_parse_depth = 0

[tool.sqlfluff.templater.dbt]
project_dir = "."
profiles_dir = "."
